--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "arangojs": "^7.7.0",
     "axios": "^0.26.1",
+    "body-parser": "^1.20.0",
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.17.3",
